--- a/Catalog.html
+++ b/Catalog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Catalog</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
       </form>
     </div>
     <div class="d-flex align-items-center">
-<a href="Catalog.html" class="Hamburger-link">
+<a href="#" class="Sandwich-link">
   <img width="32" src="img/Sandwich.svg" alt="Sandwich icon" class="Sandwich-icon">
 </a>
 <a href="#" class="login-link">
@@ -43,52 +43,29 @@
     
 </header>
   <main>
-    <section class="first-section">
-      <div class="container d-flex justify-content-between"> 
-        <img src="img/FS-image-removebg-preview.png" alt="first section image">
-      <div class="FS-Lable d-flex">
-        <span class="Fl-line"></span>
-             <div class="Lable-header">
-                <h1>THE BRAND</h1>
-                <h2>OF LUXERIOUS <span class="anover">FASHION</span></h2>
-              </div>
-       </div>
+    <section class="catalog-first-section">
+      <div class="container d-flex justify-content-between align-irtems-center"> 
+        <div class="new-arrivals">
+        <h2 class="bottom-lable">NEW ARRIVALS </h2>
+        </div>
 
+        <nav class="d-flex justify-content-between nav">
+          <a href="index.html" class="nav-item">HOME</a>
+          <a href="#" class="nav-item"> / MEN</a>
+          <a href="#" class="nav-item"> / NEW ARRIVALS</a>
 
-
-
+        </nav>
 
       </div>
     </section>
 
-    <section class="second-section">
-     <div class="container second-content">
-<div class="top-img d-flex justify-content-between align-items-center">
-  <div class="top-img-item tii-first">
-  <h3 class="top-lable">30% OFF</h3>
-  <h2 class="bottom-lable">FOR WOMEN</h2>
-  </div>
-  <div class="top-img-item tii-second">
-    <h3 class="top-lable">HOT DEA</h3>
-    <h2 class="bottom-lable">FOR MEN</h2>
-  </div>
-  <div class="top-img-item tii-third">
-    <h3 class="top-lable">NEW ARRIVALS</h3>
-    <h2 class="bottom-lable"> FOR KIDS</h2>
-  </div>
-</div>
- <div class="bottom-img-item tii-fourth">
-    <h3 class="top-lable">LUXIROUS & TRENDY</h3>
-    <h2 class="bottom-lable">ACCESORIES</h2>
-  </div>
-
-    </section>
-
+   
     <section class="third-section container">
-      <div class="third-header">
-        <h3 class="th-top">Fetured Items</h3>
-        <p class="th-text">Shop for items based on what we featured in this week</p>
+      <div class="third-header d-flex justify-content-between">
+        <h3 class="th-top ml">FILTER</h3>
+        <p class="th-text">filter</p>
       </div>
+
       <div class="third-section-cards">
        <div class="ts-Card">
          <img width="360" src="img/ts-img-1.jpg" alt="Card-image" class="ts-Card-img">
@@ -99,7 +76,7 @@
          </div>
        </div>
        <div class="ts-Card">  
-            <img width="360" src="img/ts-img-2.jpg" alt="Card-image" class="ts-Card-img">
+            <img width="360" src="img/ts-img-7.jpg" alt="Card-image" class="ts-Card-img">
          <div class="Card-description">
           <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
            <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -123,7 +100,7 @@
        </div>
        </div>
        <div class="ts-Card">
-          <img width="360" src="img/ts-img-5.jpg" alt="Card-image" class="ts-Card-img">
+          <img width="360" src="img/ts-img-8.jpg" alt="Card-image" class="ts-Card-img">
          <div class="Card-description">
           <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
            <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -131,7 +108,31 @@
        </div>
        </div>
        <div class="ts-Card">
-          <img width="360" src="img/ts-img-6.jpg" alt="Card-image" class="ts-Card-img">
+          <img width="360" src="img/ts-img-9.jpg" alt="Card-image" class="ts-Card-img">
+         <div class="Card-description">
+          <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
+           <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+           <span class="card-price">$52.00</span>
+       </div>
+       </div>
+        <div class="ts-Card">
+          <img width="360" src="img/ts-img-10.jpg" alt="Card-image" class="ts-Card-img">
+         <div class="Card-description">
+          <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
+           <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+           <span class="card-price">$52.00</span>
+       </div>
+        </div>
+        <div class="ts-Card">
+          <img width="360" src="img/ts-img-11.jpg" alt="Card-image" class="ts-Card-img">
+         <div class="Card-description">
+          <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
+           <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+           <span class="card-price">$52.00</span>
+       </div>
+        </div>
+        <div class="ts-Card">
+          <img width="360" src="img/ts-img-12.jpg" alt="Card-image" class="ts-Card-img">
          <div class="Card-description">
           <h4 class="ts-Card-header">ELLERY X M'O CAPSULE</h4>
            <p class="Card-description-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -140,7 +141,7 @@
        </div>
       </div>
 
-      <div class="Browse"> <a href="Catalog.html" class="Browse-text">Browse All Product</a> 
+      <div class="Pagination"> Pagination</a> 
       </div>
 
     </section>
