--- a/Catalog.html
+++ b/Catalog.html
@@ -141,7 +141,7 @@
        </div>
       </div>
 
-      <div class="Pagination"> Pagination</a> 
+      <div class="Pagination"> -Pagination-</a> 
       </div>
 
     </section>
