--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="css/style.css">
+ <link crossorigin='anonymous' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' integrity='sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay' rel='stylesheet'/>
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+     <link rel="stylesheet" href="css/style.css">
   
 </head>
 <body>
@@ -239,13 +240,15 @@
 <p class="Rights">&#169; 2021  Brand  All Rights Reserved.</p>
 <div class="social">
 <ul class="d-flex justify-content-between">
-  <li class="social-item d-flex"><a href="" class="social-link"><img src="img/facebook.svg" alt="facebook icon" class="fb-icon"></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><img src="img/instag.svg" alt="instagram-icon" class="inst-icon"></a></li>
- <li class="social-item d-flex"><a href="" class="social-link"><img src="img/pinterest.svg" alt="instagram-icon" class="inst-icon"></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><img src="img/twitter.svg" alt="instagram-icon" class="inst-icon"></a></li>
+  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+ <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
+  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
 </ul>
 </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
