--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
  <link crossorigin='anonymous' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' integrity='sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay' rel='stylesheet'/>
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
      <link rel="stylesheet" href="css/style.css">
   
 </head>
@@ -21,18 +21,18 @@
         <img width="44" src="img/Logo.svg" alt="Brand-logo" class="logo-image">
       </a>
       <form class="form">
-         <a href="#" class="Searh-link">
+         <a href="#" class="Searh-link" >
         <img width="26" src="img/Search.svg" alt="Searh-icon" class="Searh-icon">
       </a>
       </form>
     </div>
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center"  >
       <details class="Hamburger">
         <summary class="Humburger-link">
-  <img width="32" src="img/Sandwich.svg" alt="Sandwich icon" class="Sandwich-icon">
+  <img width="32" src="img/Sandwich.svg" alt="Sandwich icon" class="Sandwich-icon" id="Hlink">
 </summary>
-<div class="menu">
-  <span class="close">&#10006;</span>
+<div class="menu" id="Hmenu">
+  <span class="close" id="close">&#10006;</span>
 <h3 class="menu-heading">MENU</h3>
 <div class="block-menu">
 <h3 class="menu-names">MAN</h3>
@@ -248,7 +248,8 @@
 </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 
 </html>
