--- a/Catalog.html
+++ b/Catalog.html
@@ -168,70 +168,28 @@
       </details>
 
       <div class="filter-nav d-flex justify-content-between">
-          <details>     
-        <summary class="filter"><p class="filter-nav-name">TRENDING NOW</p> </summary>
-          <div class="filter-nav-menu trend-menu">
-          <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>TREND1</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>TREND2</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>TREND3</span>
-            </label>
-           </div>
-          </div>
-          </details>
-          <details>     
-        <summary class="filter"><p class="filter-nav-name">SIZE </p> </summary>
-          <div class="filter-nav-menu">
-            <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>XS</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>S</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>M</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>L</span>
-            </label>
-            </div>
-          </div>
-          </details>
-           <details>     
-        <summary class="filter"><p class="filter-nav-name">PRICE</p> </summary>
-          <div class="filter-nav-menu price-menu">
-          <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>LOW</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>MIDDLE</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>HIGH</span>
-            </label>
-           </div>
-          </div>
-          </details>
+       <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">TRENDING NOW</option>
+         <option value="TREND1">TREND1</option>
+         <option value="TREND2">TREND2</option>
+         <option value="TREND3">TREND3</option>
+       </select>
+         <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">SIZE</option>
+         <option value="XS">XS</option>
+         <option value="S">S</option>
+         <option value="M">M</option>
+         <option value="L">L</option>
+       </select>
+            <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">PRICE</option>
+         <option value="TREND1">LOW</option>
+         <option value="TREND2">MIDDLE</option>
+         <option value="TREND3">HIGH</option>
+       </select>
 
       </div>
-      </div>
+    </div>
 
       <div class="third-section-cards">
             <div class="item-box">
