--- a/Product.html
+++ b/Product.html
@@ -111,70 +111,28 @@
            <span class="price">$561</span>
            <hr>
             <div class="slider-filter-nav d-flex justify-content-between">
-              <details>     
-                <summary class="filter"><p class="filter-nav-name">CHOOSE COLOR</p> </summary>
-                 <div class="filter-nav-menu trend-menu">
-          <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>RED</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>BLUE</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>GREEN</span>
-            </label>
-           </div>
-          </div>
-              </details>
-              <details>     
-                <summary class="filter"><p class="filter-nav-name">CHOOSE SIZE  </p> </summary>
-                <div class="filter-nav-menu">
-            <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>XS</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>S</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>M</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>L</span>
-            </label>
-            </div>
-          </div>
-              </details>
-              <details>     
-                 <summary class="filter"><p class="filter-nav-name">QUANTITY</p> </summary>
-                  <div class="filter-nav-menu q-menu">
-          <div class="filter-input">
-           <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>X1</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>X2</span>
-            </label>
-            <label class="custom-radio">
-              <input type="radio" name="gender" class="visually-hidden" >
-              <span>X3</span>
-            </label>
-           </div>
-          </div>
-              </details>
+            <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">CHOOSE COLOR</option>
+         <option value="TREND1">RED</option>
+         <option value="TREND2">BLUE</option>
+         <option value="TREND3">GREEN</option>
+       </select>
+         <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">CHOOSE SIZE </option>
+         <option value="XS">XS</option>
+         <option value="S">S</option>
+         <option value="M">M</option>
+         <option value="L">L</option>
+       </select>
+            <select name="select" id="format" class="select">
+         <option selected disabled class="sel-opt">QUANTITY</option>
+         <option value="TREND1">x1</option>
+         <option value="TREND2">x2</option>
+         <option value="TREND3">x3</option>
+       </select>
             </div>
             <div class="add-cart-sl">
-           <a href="#" class="add-cart-link-sl"><img width="26" src="img/red-cart-link.svg" alt="cart-icon"> <span class="cart-text">Add to Cart</span></a>
+           <a href="#" class="add-cart-link-sl"><span class="sl-cart-text cart-text">Add to Cart</span></a>
          </div>
          </div>
 
