--- a/Catalog.html
+++ b/Catalog.html
@@ -69,7 +69,7 @@
 <a href="#" class="login-link">
   <img width="29" src="img/Login.svg" alt="Login icon" class="Login-icon">
 </a>
-<a href="#" class="Cart-link">
+<a href="Cart.html" class="Cart-link">
   <div class="Cart">
   <img width="32" src="img/Cart.svg" alt="" class="Cart-icon">
   <span class="Cart-items">5</span>
