--- a/Cart.html
+++ b/Cart.html
@@ -88,7 +88,7 @@
       </div>
     </section>
 <section class="carts"> 
-  <div class="container d-flex justify-content-between ">
+  <div class="container d-flex justify-content-between">
 <div class="left-cart-block">
 <div class="cart d-flex">
   <img src="img/cart_img.jpg" alt="cart-image" class="cart-image">
@@ -122,10 +122,24 @@
     
   </div>
 </div>
+<div class="clb-bottons d-flex justify-content-between"><a class="clb-botton" href="#">CLEAR SHOPPING CART</a><a class="clb-botton" href="Product.html">CONTINUE SHOPPING</a></div>
 </div>
 
 <div class="right-cart-block">
+  <form class="rcb-form" action="#">
+  <legend class="form-heading">SHIPPING ADRESS</legend>
+  <input class="country" id="country" placeholder="Bangladesh">
+  <input class="country state" id="state" placeholder="State">
+  <input class="country state" id="addres" placeholder="Postcode / Zip">
+  <input class="country get-button" type="submit" value="GET A QUOTE">
+  </form>
 
+  <div class="total">
+    <h4>SUB TOTAL<span>$900</span></h4>
+    <h3>GRAND TOTAL<span>$900</span></h3>
+    <hr>
+    <button></button>
+  </div>
 
 </div>
 
