--- a/Cart.html
+++ b/Cart.html
@@ -136,9 +136,10 @@
 
   <div class="total">
     <h4>SUB TOTAL<span>$900</span></h4>
+    <!-- <div style="clear: left"></div> -->
     <h3>GRAND TOTAL<span>$900</span></h3>
     <hr>
-    <button></button>
+    <button class="total-btn">PROCEED TO CHECKOUT</button>
   </div>
 
 </div>
