--- a/Catalog.html
+++ b/Catalog.html
@@ -17,7 +17,7 @@
 <header class="header">
   <div class="d-flex justify-content-between align-items-center container">
     <div class="d-flex align-items-center">
-      <a href="#" class="logo-link">
+      <a href="index.html" class="logo-link">
         <img width="44" src="img/Logo.svg" alt="Brand-logo" class="logo-image">
       </a>
       <form class="form">
@@ -66,7 +66,7 @@
 </div>
 </div>
       </details>
-<a href="#" class="login-link">
+<a href="Registration.html" class="login-link">
   <img width="29" src="img/Login.svg" alt="Login icon" class="Login-icon">
 </a>
 <a href="Cart.html" class="Cart-link">
@@ -109,19 +109,19 @@
               <label class="filter-menu-heading" for="acc_1">CATEGORY</label>
               <hr class="menu-hr">
               <div class="acc-text">
-              <ul class="menu-filter-Items" >
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                    <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-              </ul>
+              <div class="menu-filter-Items" >
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+              </div>
               </div>
             </div>
             <div class="accardion-item">
@@ -129,19 +129,19 @@
               <label class="filter-menu-heading" for="acc_2">BRAND</label>
               <hr class="menu-hr">
               <div class="acc-text">
-              <ul class="menu-filter-Items" >
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                    <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-              </ul>
+              <div class="menu-filter-Items" >
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+              </div>
               </div>
             </div>
             <div class="accardion-item">
@@ -149,19 +149,19 @@
               <label class="filter-menu-heading" for="acc_3">DESIGNER</label>
               <hr class="menu-hr">
               <div class="acc-text">
-              <ul class="menu-filter-Items" >
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">T-Shirts</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Accessories</a></li>
-                  <li class="mt-2"><a class="menu-item" href="Catalog.html">Denim</a></li>
-                    <li class="mt-2"><a class="menu-item" href="Catalog.html">Bags</a></li>
-              </ul>
+              <div class="menu-filter-Items" >
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">T-Shirts</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Accessories</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Denim</a>
+                  <a class="menu-item mt-2" href="Catalog.html">Bags</a>
+              </div>
               </div>
             </div>
           </div>
