--- a/Product.html
+++ b/Product.html
@@ -17,7 +17,7 @@
 <header class="header">
   <div class="d-flex justify-content-between align-items-center container">
     <div class="d-flex align-items-center">
-      <a href="#" class="logo-link">
+      <a href="index.html" class="logo-link">
         <img width="44" src="img/Logo.svg" alt="Brand-logo" class="logo-image">
       </a>
       <form class="form">
@@ -66,7 +66,7 @@
 </div>
 </div>
       </details>
-<a href="#" class="login-link">
+<a href="Registration.html" class="login-link">
   <img width="29" src="img/Login.svg" alt="Login icon" class="Login-icon">
 </a>
 <a href="Cart.html" class="Cart-link">
