--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
  <link crossorigin='anonymous' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' integrity='sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay' rel='stylesheet'/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
      <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="css/media.css">
   
 </head>
 <body>
 <header class="header">
   <div class="d-flex justify-content-between align-items-center container">
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center logo">
       <a href="index.html" class="logo-link">
         <img width="44" src="img/Logo.svg" alt="Brand-logo" class="logo-image">
       </a>
@@ -26,7 +27,7 @@
       </a>
       </form>
     </div>
-    <div class="d-flex align-items-center"  >
+    <div class="d-flex align-items-center right-links"  >
       <details class="Hamburger">
         <summary class="Humburger-link">
   <img width="32" src="img/Sandwich.svg" alt="Sandwich icon" class="Sandwich-icon" id="Hlink">
@@ -94,7 +95,7 @@
       </div>
     </section>
 
-    <section class="second-section">
+    <section class="second-section"> 
      <div class="container second-content">
 <div class="top-img d-flex justify-content-between align-items-center">
   <a class="top-img-item tii-first" href="Product.html">
@@ -242,7 +243,7 @@
     </section>
 
     <section class="fourth-section"> 
-       <div class="container d-flex justify-content-between ">
+       <div class="container d-flex justify-content-between fs">
           <div class="fs-content">
   <img width="45" src="img/car.svg" alt="car-icon">
   <h4>Free Delivery</h4>
@@ -256,18 +257,18 @@
           <div class="fs-content">
   <img width="47" src="img/Crown.svg" alt="Crown-icon">
   <h4>Quality assurance</h4>
-  <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+  <p>Worldwide delivery on all. Authorit tively morph  next-generation innov tion with extensive models.</p>
           </div>
        </div>
     </section>
-
-    <section class="five-section">
-      <div class="overlay">
-       <div class="container d-flex justify-content-between ">
-           <div class="left-block">
+  <footer>
+       <div class="top-footer-block">
+         <div class="overlay">
+           <div class="container d-flex justify-content-between footer-top-content">
+           <figure class="left-block">
           <img width="96" src="img/face.png" alt="fase" class="face">
             <p class="lb-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-           </div>
+           </figure>
            <div class="right-block">
              <h3>SUBSCRIBE</h3>
              <h3>FOR OUR NEWLETTER AND PROMOTION</h3>
@@ -278,21 +279,22 @@
            </div>
          </div>
       </div>
-    </section>
+       </div>
   
-  <footer class="footer">
-    <div class="container d-flex justify-content-between ">
-<p class="Rights">&#169; 2021  Brand  All Rights Reserved.</p>
-<div class="social">
-<ul class="d-flex justify-content-between">
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
- <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-</ul>
-</div>
-    </div>
-  </footer>
+    <div class="footer-bottom">
+      <div class="container d-flex justify-content-between ">
+        <p class="Rights">&#169; 2021  Brand  All Rights Reserved.</p>
+         <div class="social">
+           <ul class="d-flex justify-content-between">
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+         </div>
+      </div>
+    </div> 
+  </footer> 
 <script src="js/script.js"></script>
 
 </body>
