--- a/Catalog.html
+++ b/Catalog.html
@@ -392,14 +392,15 @@
           </div>
        </div>
     </section>
-
-    <section class="five-section">
-      <div class="overlay">
-       <div class="container d-flex justify-content-between ">
-           <div class="left-block">
+</main>
+  <footer>
+       <div class="top-footer-block">
+         <div class="overlay">
+           <div class="container d-flex justify-content-between footer-top-content">
+           <figure class="left-block">
           <img width="96" src="img/face.png" alt="fase" class="face">
             <p class="lb-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-           </div>
+           </figure>
            <div class="right-block">
              <h3>SUBSCRIBE</h3>
              <h3>FOR OUR NEWLETTER AND PROMOTION</h3>
@@ -410,21 +411,22 @@
            </div>
          </div>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="container d-flex justify-content-between ">
-<p class="Rights">&#169; 2021  Brand  All Rights Reserved.</p>
-<div class="social">
-<ul class="d-flex justify-content-between">
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
- <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
-  <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
-</ul>
-</div>
-    </div>
-  </footer>
+       </div>
+  
+    <div class="footer-bottom">
+      <div class="container d-flex justify-content-between ">
+        <p class="Rights">&#169; 2021  Brand  All Rights Reserved.</p>
+         <div class="social">
+           <ul class="d-flex justify-content-between">
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-instagram"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
+             <li class="social-item d-flex"><a href="" class="social-link"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+         </div>
+      </div>
+    </div> 
+  </footer> 
     <script src="js/script_2.js"></script>
 </body>
 </html>
